--- a/angular/pdata/fastapi/src/index.html
+++ b/angular/pdata/fastapi/src/index.html
@@ -8,9 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="stylesheet" href="/assets/bootstrap-4.2.1-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/mcsta.css">
-  <link rel="stylesheet" media="print" href="/assets/css/print.css" />
-
+  <link rel="stylesheet" href="/assets/css/fastapi.css">
+ 
 
 </head>
 <style>
